--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 oauth2:
   client:
     providers:
-      github:
+      - provider: github
         client-id: ${GITHUB_CLIENT_ID:3be5dba121b074dcd72d}
         client-secret: ${GITHUB_CLIENT_SECRET:411e16d70ebd97e2fe47553de7906a69a0cf8243}
         authorization-request-uri: /oauth2/authorization/github
