--- a/src/main/resources/db/changelog/v.1.0/db.changelog-v.1.0.yml
+++ b/src/main/resources/db/changelog/v.1.0/db.changelog-v.1.0.yml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: 20230418_1720__init-db.yml
       relativeToChangelogFile: true
+  - include:
+      file: 20230420_0840__init-data.sql
+      relativeToChangelogFile: true
