--- a/auth-service-client/build.gradle
+++ b/auth-service-client/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'org.springframework.boot' version '2.7.10'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.bmo.common'
@@ -26,6 +28,14 @@ repositories {
 
 dependencies {
     implementation project(':auth-service-model')
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.6"
+    }
 }
 
 test {
