--- a/auth-service-core/build.gradle
+++ b/auth-service-core/build.gradle
@@ -34,10 +34,6 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    set('springCloudVersion', "2021.0.6")
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql'
@@ -51,7 +47,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.security:spring-security-crypto'
 
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.2'
 
@@ -77,11 +73,6 @@ dependencies {
 
 apply plugin: "org.liquibase.gradle"
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
 
 tasks.named('test') {
     useJUnitPlatform()
