--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'auth-service'
 include 'auth-service-model'
 include 'auth-service-client'
+include 'auth-service-reactive-client'
 include 'auth-service-core'
 
