--- a/auth-service-core/src/main/resources/application.yml
+++ b/auth-service-core/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:54326/postgres?currentSchema=public}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:54326/postgres?currentSchema=auth_service_schema}
     username: ${DATABASE_USERNAME:postgres}
     password: ${DATABASE_PASSWORD:postgres}
     hikari:
