changes for automatic build

--- a/auth-service-client/build.gradle
+++ b/auth-service-client/build.gradle
@@ -38,6 +38,14 @@ dependencyManagement {
     }
 }
 
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 test {
     useJUnitPlatform()
 }
