--- a/auth-service-reactive-client/build.gradle
+++ b/auth-service-reactive-client/build.gradle
@@ -40,6 +40,14 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:1.18.26"
 }
 
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 test {
     useJUnitPlatform()
 }
