final assembly changes

--- a/auth-service-core/build.gradle
+++ b/auth-service-core/build.gradle
@@ -74,6 +74,10 @@ dependencies {
 
 apply plugin: "org.liquibase.gradle"
 
+jar {
+    //disable generating '*-plain.jar'
+    enabled = false
+}
 
 tasks.named('test') {
     useJUnitPlatform()
